- 기존 테스트 코드 삭제. - 데이터 소스 예외처리 처리 방식 변경. - 클래스 관련 명칭 변경 1차 작업 완료. - 단언 관리 UI 초안 작업중.